Added Download functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,10 @@
         border-color: #E67E22;
         box-shadow: none;
       }
+
+      a, a:hover, a:focus, a:active, a:visited {
+        color: #E67E22;
+      }
     </style>
     
     
