--- a/templates/index.html
+++ b/templates/index.html
@@ -139,11 +139,11 @@
         </div> -->
         <br>
         <div style="display:inline-block;">
-          <button type="submit" class="btn btn-warning btn-simple" id="search">Search</button>
+          <button type="submit" class="btn btn-warning btn-simple" id="search" name="search">Search</button>
         </div>
-        <!-- <div style="float: right">
-          <button type="submit" class="btn btn-warning btn-simple" id="download">Download .csv</button>
-        </div> -->
+        <div class="download" style="float: right">
+          <a href="/getPlotCSV"><button type="button" class="btn btn-warning btn-simple" id="download" name="download">Download .csv</button></a>
+        </div>
         
       </form>
     </div>
