--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,6 @@
     <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
     <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
     <script src="../assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
-    <!--  Google Maps Plugin    -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-    <!-- Chartist JS -->
-    <script src="../assets/js/plugins/chartjs.min.js"></script>
     <!--  Notifications Plugin    -->
     <script src="../assets/js/plugins/bootstrap-notify.js"></script>
     <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
@@ -49,13 +45,44 @@
       a, a:hover, a:focus, a:active, a:visited {
         color: #E67E22;
       }
+
+      .plotly-chart table{
+        color: #E67E22;
+      }
+
+      .suggestions-box {
+        border-radius: 5px;
+        margin-top: -15px;
+        position: absolute;
+        width: 98%;
+        max-height: 100px;
+        overflow-y: auto;
+        border: none; /* Remove border */
+        outline: none; /* Remove outline */
+        box-shadow: none; /* Remove box shadow */
+        background-color: #fff;
+        z-index: 1;
+        pointer-events: auto;
+        
+      }
+
+      .suggestion-item {
+          padding: 1px 12px;
+          cursor: pointer;
+          pointer-events: auto;
+      }
+
+      .suggestion-item:hover {
+          background-color: #8b8b8b;
+          color: white;
+      }
     </style>
     
     
 </head>
 <body class=""><!-- class="white-content"  -->
     <nav class="navbar navbar-expand-lg navbar-custom">
-      <img src="static\css\newlogo.png" width="190" height="50" class="d-inline-block align-top" alt="">
+      <a href="/"><img src="static\css\newlogo.png" width="190" height="50" class="d-inline-block align-top" alt="T2T Logo"></a>
         <div class="container">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-bar navbar-kebab"></span>
